# libansilove

./: .gitignore  .travis.yml  AGENTS.md  AUTHORS  BRAMWELL_VERIFICATION.md  BUILD_INSTRUCTIONS.md  CHARACTER_ANALYSIS.md  CMakeLists.txt  CORPUS_BUILDING.md  ChangeLog  HUMAN_REVIEW_INSTRUCTIONS.md  INDEX.md  NEXT_SESSION_START_HERE.md  PHASE3_COMPLETION.md  PHASE3_VERIFICATION.txt  PR_DESCRIPTION.md  README.md  RENDERING_FIX_SUMMARY.md  SESSION_NOTES_BACKGROUND_COLOR_FIX.md  TERMINAL_MODE.md  THANKS  TODO  UTF8ANSI_VALIDATION.md  ansilove-utf8ansi  ansilove-utf8ansi-ansee  ansilove-utf8ansi-ansee.c  ansilove_ansi.3  ansilove_artworx.3  ansilove_binary.3  ansilove_error.3  ansilove_icedraw.3  ansilove_init.3  ansilove_loadfile.3  ansilove_savefile.3  ansilove_tundra.3  ansilove_xbin.3  debug_grid  debug_grid.c  debug_parser  debug_parser.c  (+12 more)
.specs/utf8ansi/: DONE.md  PEER_REVIEW.md  README.md  ansee-comparison.md  blockers.md  idea.md  task-build-clean.md  task-color-fix.md  task-demo.md  task-state-machine-verify.md  task-tests.md
ansi_test_files/: box_drawing.ans  cursor_test.ans  palette.ans  simple_colors.ans
compat/: reallocarray.h  strndup.c  strndup.h
example/: CMakeLists.txt  example.c  example_terminal.c
example/wasm/: index.html  libansilove.js  libansilove.wasm
fuzz/: CMakeLists.txt  ansi.c  artworx.c  binary.c  icedraw.c  pcboard.c  tundra.c  xbin.c
include/: ansilove.h
man/: ansilove_ansi.3  ansilove_artworx.3  ansilove_binary.3  ansilove_clean.3  ansilove_error.3  ansilove_icedraw.3  ansilove_init.3  ansilove_loadfile.3  ansilove_pcboard.3  ansilove_savefile.3  ansilove_tundra.3  ansilove_xbin.3  libansilove.3
npm/: AGENTS.md  bun.lockb  package.json
scripts/: safari-wasm-smoke.js  test-wasm-browser.sh  test-wasm-node.js  test-wasm.sh
src/: ansilove.h  clean.c  clean_minimal.c  config.h  cp437_unicode.h  dos_colors.h  drawchar.c  drawchar.h  error.c  explode.c  explode.h  fonts.c  fonts.h  init.c  loadfile.c  output.c  output.h  savefile.c  strtolower.c  strtolower.h  terminal.c
src/fonts/: font_amiga_microknight.h  font_amiga_microknight_plus.h  font_amiga_mosoul.h  font_amiga_pot_noodle.h  font_amiga_topaz_1200.h  font_amiga_topaz_1200_plus.h  font_amiga_topaz_500.h  font_amiga_topaz_500_plus.h  font_atari_ansiterm.h  font_pc_80x25.h  font_pc_80x50.h  font_pc_baltic.h  font_pc_cyrillic.h  font_pc_french_canadian.h  font_pc_greek.h  font_pc_greek869.h  font_pc_hebrew.h  font_pc_icelandic.h  font_pc_latin1.h  font_pc_latin2.h  font_pc_nordic.h  font_pc_portuguese.h  font_pc_russian.h  font_pc_spleen.h  font_pc_terminus.h  font_pc_turkish.h
src/loaders/: ansi.c  ansi.h  artworx.c  binary.c  icedraw.c  pcboard.c  pcboard.h  tundra.c  xbin.c
tools/: analyze_batch.py  batch_validate.sh  confidence_analysis.py
wasm/: ansilove_wasm.c  compile_flags.txt  gd.h  minigd.c
